working-assets/css/critical.css
*,
:after,
:before {
  box-sizing: border-box !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scroll-behavior: smooth;
  interpolate-size: allow-keywords;
}

[hidden] {
  display: none !important;
  opacity: 0 !important;
  transform: scale(0) !important;
}
@media screen and (width <=400px) {
  html {
    scrollbar-gutter: stable;
  }
}

body {
  overscroll-behavior-y: none;
  font-family: var(--text-font-family);
  color: var(--c-black);
  margin: 0;
  width: 100%;
  height: 100%;
  font-size: var(--txt-p);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

main {
  display: block;
  flex-grow: 1;
  background-color: var(--c-white);
  min-height: 65vh;
}

@media screen and (width > 750px) {
  #attentive_creative {
    bottom: 40px !important;
    rotate: 0deg;
    right: 5px !important;
  }
}

/* IMAGE */

img {
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: var(--radius);
  filter: saturate(1.05) contrast(1.05);

  &.cover {
    min-height: 100%;
  }
}

/* TEXT */

h1,
.h1,
blockquote {
  font-size: var(--txt-h1);
  text-transform: uppercase;
  font-family: var(--emphasis-heading-font-family);
  letter-spacing: var(--letter-spacing);
  font-weight: 400;
  letter-spacing: 0;
}

@media screen and (min-width: 800px) {
  .section--page-main h1 {
    text-align: center;
  }
}

h2,
.h2 {
  font-size: var(--txt-h2);
  text-transform: uppercase;
  font-family: var(--heading-font-family);
  font-weight: var(--heading-font-weight);
  text-align: center;
}

h3,
.h3 {
  font-size: var(--txt-h3);
  font-family: var(--text-font-family);
  text-transform: uppercase;
  text-align: center;
}

h4,
.h4 {
  font-size: var(--txt-h4);
  font-family: var(--text-font-family);
  text-align: center;
  color: oklch(from currentColor calc(l + .1) c h);
}

h5,
.h5 {
  font-size: var(--txt-p);
  font-family: var(--text-font-family);
  font-weight: 400;
  color: oklch(from currentColor calc(l + .2) c h);
}

p,
a,
button,
li,
span {
  font-size: var(--txt-p);
  font-family: var(--text-font-family);
  text-decoration: none;

  &:first-child {
    margin: 0;
  }

  & .Icon {
    height: 1.1rem;
    margin-top: -0.2rem;
  }
}

span {
  font-size: inherit;
}

p {
  max-width: 75ch;
  margin-inline: auto;
  letter-spacing: 0.03em;
}

.text-align--left {
  text-align: left;
}

.text-align--center {
  text-align: center;
}

.text-align--right {
  text-align: right;
}

a,
.a {
  color: var(--c-grey);
  filter: brightness(1);
  transition: color .2s ease, filter .2s ease;

  &:hover {
    color: var(--c-dark-grey)
  }
/* &[target="_blank"]::after {
  content: "";
  width: 1em;
  height: 1em;
  display: inline-block;

  background: no-repeat center / contain url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22currentColor%22%20stroke-width%3D%221%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20stroke%3D%22none%22%20d%3D%22M0%200h24v24H0z%22%20fill%3D%22none%22%2F%3E%3Cpath%20d%3D%22M12%206h-6a2%202%200%200%200%20-2%202v10a2%202%200%200%200%202%202h10a2%202%200%200%200%202%20-2v-6%22%20%2F%3E%3Cpath%20d%3D%22M11%2013l9%20-9%22%20%2F%3E%3Cpath%20d%3D%22M15%204h5v5%22%20%2F%3E%3C%2Fsvg%3E");
} */
}

hr {
  background-color: var(--c-light-grey);
  border: 0;
  height: 1px;
  margin: 1.5em 0;
}

blockquote {
  font-size: var(--txt-h2);
  position: relative;
  border-block: 1px solid var(--c-light-grey);
  display: block;
  margin: .6em 0 .6em;
  padding: 1.2rem 0 2.4rem 1.8rem;
  letter-spacing: 0.1ch;

  &::before {
    position: absolute;
    content: "“";
    font-size: var(--txt-xxl);
    left: 1.8rem;
    top: 1.2rem;
    transform: translate(-70%, -10%);
    line-height: 1;
    margin: 0;
    opacity: 0.5;
  }

  &::after {
    content: attr(data-quote-attribution);
    position: absolute;
    right: 1rem;
    bottom: 1.8rem;
    transform: translateY(100%);
    font-style: italic;
    font-family: var(--text-font-family);
    font-size: var(--txt-p);
    text-transform: none;
  }
}

.uppercase {
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing);
}

.center {
  text-align: center;
  margin: 0 auto;
}

.left {
  text-align: left;
}

.no-block-margin {
  margin-block: 0;
}

.success,
.warning,
.error,
.info,
.flag {
  --colour: var(--c-black);
  --bg-colour: var(--colour);
  padding: .4rem 0.75rem;
  display: inline-block;
  place-content: center;
  border-radius: var(--radius);
  backdrop-filter: blur(.5rem) contrast(0.5) brightness(1.5);
  color: var(--colour);
  background-color: oklch(from var(--bg-colour) calc(l + 1.2) c h / 0.4);
  border: 1px solid oklch(from var(--bg-colour) calc(l + 0.2) c h / 0.5);
  text-box-trim: trim-both;
    text-box-edge: cap alphabetic;
}

@supports (margin-block: 1lh) {

  .success,
  .warning,
  .error,
  .info,
  .flag {
    padding: .5lh 1ch;
  }
}

.success {
  --colour: var(--c-success);
}

.error {
  --colour: var(--c-error);
}

.warning {
  --colour: var(--c-warning)
}

.info {
  --colour: var(--c-info);
}

.emphasis {
  font-family: var(--emphasis-heading-font-family) !important;
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing);
}

.signature {
  font-family: var(--signature-text-font-family);
  text-transform: none;
  letter-spacing: 0ch !important;
  font-weight: 400;
  display: inline-block;
  scale: 1.6;
  margin-inline: 2.5ch !important;
}

.baskerville {
  font-family: var(--baskerville-font-family) !important;
  letter-spacing: calc(var(--letter-spacing) * 1.333);
  line-height: 1 !important;
  margin-inline: calc(var(--letter-spacing) * 1.333 * -1);
    font-weight: 400 !important
}
/* ... */

